logs/op_pointnet2__ext_furthest_point_sampling/run_09/summary.txt
=== Op Pipeline Round 09 Summary ===
Operator: pointnet2__ext_furthest_point_sampling
Time: 2026-07-06 17:35:27

--- build.log (tail 20) ---
CPack: - Run preinstall target for: opp
CPack: - Install project: opp []
CMake Error at /home/orange/pipeline_tool/AscendDevTool/op_builder/ops_src/pointnet2__ext_furthest_point_samplingSample/FrameworkLaunch/pointnet2__ext_furthest_point_sampling/build_out/op_kernel/cmake_install.cmake:58 (file):
  file INSTALL cannot find
  "/home/orange/pipeline_tool/AscendDevTool/op_builder/ops_src/pointnet2__ext_furthest_point_samplingSample/FrameworkLaunch/pointnet2__ext_furthest_point_sampling/build_out/op_kernel/binary/ascend310p":
  No such file or directory.
Call Stack (most recent call first):
  /home/orange/pipeline_tool/AscendDevTool/op_builder/ops_src/pointnet2__ext_furthest_point_samplingSample/FrameworkLaunch/pointnet2__ext_furthest_point_sampling/build_out/cmake_install.cmake:57 (include)


CMake Error at /home/orange/pipeline_tool/AscendDevTool/op_builder/ops_src/pointnet2__ext_furthest_point_samplingSample/FrameworkLaunch/pointnet2__ext_furthest_point_sampling/build_out/op_kernel/cmake_install.cmake:62 (file):
  file INSTALL cannot find
  "/home/orange/pipeline_tool/AscendDevTool/op_builder/ops_src/pointnet2__ext_furthest_point_samplingSample/FrameworkLaunch/pointnet2__ext_furthest_point_sampling/build_out/op_kernel/binary/config":
  No such file or directory.
Call Stack (most recent call first):
  /home/orange/pipeline_tool/AscendDevTool/op_builder/ops_src/pointnet2__ext_furthest_point_samplingSample/FrameworkLaunch/pointnet2__ext_furthest_point_sampling/build_out/cmake_install.cmake:57 (include)


CPack Error: Error when generating package: opp
gmake: *** [Makefile:71：package] 错误 1

--- verify.log (tail 20) ---
========== 3. VERIFY: pointnet2__ext_furthest_point_sampling ==========
[WARN] 未找到 AclNNInvocation 目录: /home/orange/pipeline_tool/AscendDevTool/op_builder/ops_src/pointnet2__ext_furthest_point_samplingSample/FrameworkLaunch/AclNNInvocation，跳过验证步骤。

--- test.log (tail 30) ---
subprocess.CalledProcessError: Command '['ninja', '-v']' returned non-zero exit status 1.

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/orange/pipeline_tool/AscendDevTool/op_builder/ops_src/test_pointnet2__ext_furthest_point_sampling.py", line 66, in <module>
    ok=test()
  File "/home/orange/pipeline_tool/AscendDevTool/op_builder/ops_src/test_pointnet2__ext_furthest_point_sampling.py", line 41, in test
    load_inline(name='fps_test_ops', cpp_sources=[cpp_source],
  File "/home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch/utils/cpp_extension.py", line 1723, in load_inline
    return _jit_compile(
  File "/home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch/utils/cpp_extension.py", line 1798, in _jit_compile
    _write_ninja_file_and_build_library(
  File "/home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch/utils/cpp_extension.py", line 1926, in _write_ninja_file_and_build_library
    _run_ninja_build(
  File "/home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch/utils/cpp_extension.py", line 2225, in _run_ninja_build
    raise RuntimeError(message) from e
RuntimeError: Error building extension 'fps_test_ops': [1/2] c++ -MMD -MF main.o.d -DTORCH_EXTENSION_NAME=fps_test_ops -DTORCH_API_INCLUDE_EXTENSION_H -DPYBIND11_COMPILER_TYPE=\"_gcc\" -DPYBIND11_STDLIB=\"_libstdcpp\" -DPYBIND11_BUILD_ABI=\"_cxxabi1011\" -I/home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch_npu/include -isystem /home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch/include -isystem /home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch/include/torch/csrc/api/include -isystem /home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch/include/TH -isystem /home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch/include/THC -isystem /home/orange/miniconda3/envs/torch_npu/include/python3.10 -D_GLIBCXX_USE_CXX11_ABI=0 -fPIC -std=c++17 -c /tmp/tmpo_85hf0q/main.cpp -o main.o 
FAILED: [code=1] main.o 
c++ -MMD -MF main.o.d -DTORCH_EXTENSION_NAME=fps_test_ops -DTORCH_API_INCLUDE_EXTENSION_H -DPYBIND11_COMPILER_TYPE=\"_gcc\" -DPYBIND11_STDLIB=\"_libstdcpp\" -DPYBIND11_BUILD_ABI=\"_cxxabi1011\" -I/home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch_npu/include -isystem /home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch/include -isystem /home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch/include/torch/csrc/api/include -isystem /home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch/include/TH -isystem /home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch/include/THC -isystem /home/orange/miniconda3/envs/torch_npu/include/python3.10 -D_GLIBCXX_USE_CXX11_ABI=0 -fPIC -std=c++17 -c /tmp/tmpo_85hf0q/main.cpp -o main.o 
/tmp/tmpo_85hf0q/main.cpp: In function ‘at::Tensor fps_npu(const at::Tensor&, int64_t)’:
/tmp/tmpo_85hf0q/main.cpp:6:5: error: ‘at_npu’ has not been declared
    6 |     at_npu::native::OpCommand cmd;
      |     ^~~~~~
/tmp/tmpo_85hf0q/main.cpp:7:5: error: ‘cmd’ was not declared in this scope
    7 |     cmd.Name("pointnet2__ext_furthest_point_sampling").Input(xyz).Output(out).Attr("npoint", npoint).Run();
      |     ^~~
ninja: build stopped: subcommand failed.

[ERROR] 2026-07-06-17:35:26 (PID:1686985, Device:-1, RankID:-1) ERR99999 UNKNOWN applicaiton exception

--- status ---
BUILD_OK
VERIFY_OK
TEST_ERROR
